fixed camo stretching issue

--- a/src/styles/_camo.scss
+++ b/src/styles/_camo.scss
@@ -1,7 +1,7 @@
 .camo {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   aspect-ratio: auto 1/1;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
   width: 100%;
@@ -18,6 +18,7 @@
 .camo-button {
   padding: 0;
   height: 100%;
+  width: 100%;
 }
 
 .camo:hover {
